# cosri-patientsearch

./: .babelrc  .env  .eslintrc.json  .gitignore  Dockerfile  README.md  client_secrets.json.default  client_secrets_old.json  docker-compose.dev.yaml  docker-compose.yaml  envs.sh  eslint.config.mjs  jest.config.js  package-lock.json  package.json  patientsearch.config  patientsearch.env.default  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  webpack.config.js
.github/workflows/: build-deliver.yaml  lint.yaml  test-build-deliver.yaml  test.yaml
patientsearch/: __init__.py  api.py  audit.py  config.py  extensions.py  jsonify_abort.py  logserverhandler.py
patientsearch/local/: __init__.py  api.py  bearer_auth.py  config.py  dist  extensions.py  src  views
patientsearch/models/: __init__.py  bearer_auth.py  sync.py
patientsearch/src/: index.html
patientsearch/src/__tests__/: App.test.js  README.md  Search.test.js
patientsearch/src/__tests__/components/: Agreement.test.js  DetailPanel.test.js  DialogBox.test.js  Dropdown.test.js  Error.test.js  FilterRow.test.js  FormattedInput.test.js  Header.test.js  HistoryTable.test.js  Info.test.js  OverdueAlert.test.js  PatientListTable.test.js  SystemBanner.test.js  TimeoutModal.test.js  UrineScreen.test.js  Version.test.js
patientsearch/src/__tests__/containers/: App.test.js
patientsearch/src/js/: App.js  Entry.js  Landing.js  Logout.js
patientsearch/src/js/components/: Agreement.js  Alert.js  ClientAppRedirect.js  DetailPanel.js  DialogBox.js  Dropdown.js  EditButtonGroup.js  Error.js  FilterRow.js  (+24 more)
patientsearch/src/public/: sample.json
patientsearch/src/styles/: app.scss  patientListStyle.js
patientsearch/views/: __init__.py
tests/: conftest.py  test_columnconfig.py  test_sync.py
tests/test_columnconfig/: patient_bundle.json
tests/test_sync/: external_patient_active_search.json  external_patient_search.json  external_patient_search_not-active.json  internal_patient_active_match.json  internal_patient_duplicate_active_match.json  internal_patient_duplicate_inactive_match.json  internal_patient_duplicate_match.json  internal_patient_duplicate_mismatch.json  internal_patient_inactive_match.json  internal_patient_match.json  internal_patient_miss.json  new_patient_active_result.json  new_patient_result.json  patient_resource.json
(+36 files in other folders)
