# pyup: ignore file
# setup.py configuration file
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = patientsearch
version = attr: setuptools_scm.get_version

[options]
packages = patientsearch
zip_safe = False
include_package_data = True
setup_requires =
    setuptools_scm

# abstract requirements;
# concrete requirements belong in requirements.txt
# https://caremad.io/posts/2013/07/setup-vs-requirement/
install_requires =
    flask
    flask-jwt-extended
    flask-session
    gunicorn
    requests
    jmespath
    python-json-logger

[options.extras_require]
dev =
    pytest
    pytest-flask
    pytest-datadir
    pytest-mock
    tox

[tool:pytest]
addopts = --color yes --verbose
console_output_style = classic
filterwarnings =
    # only print each warning once per module
    module

    # Ignore testing-specific warning
    ignore:^"localhost" is not a valid cookie domain, it must contain a.*:Warning

    # Ignore warnings on specific dependencies (already reported upstream)
    ignore::DeprecationWarning:dogpile
    ignore::DeprecationWarning:flask_user

    # error on bad assertions
    error:.*assertion is always true.*
